<resources>
    <string name="app_name">ProjetAndroid</string>
    <string name="date"><u>Taken the</u></string>
    <string name="height"><u>Height :</u></string>
    <string name="width"><u>Width :</u></string>
    <string name="location"><u>Taken at</u></string>
    <string name="title"><u>Image name :</u></string>
    <string name="back">Back</string>
    <string name="connection_fail">Échec de connexion</string>
    <string name="upload_success">Téléversement réussi</string>
</resources>
